--- a/photoup/templates/index.html
+++ b/photoup/templates/index.html
@@ -1,3 +1,6 @@
+{# staticファイルを使えるようにする #}
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -15,7 +18,7 @@
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="../static/css/styles.css" rel="stylesheet" />
+        <link href="{% static 'kouka2/css/styles.css' %}" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
